[package]
authors = ["Saverio Miroddi <saverio.pub2@gmail.com>"]
edition = "2018"
name = "boing-ggez"
version = "0.1.0"

[dependencies]
fastrand = "1.7.0"
ggez = "0.7.0"
glam = {version = "0.20.5", features = ["mint"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
 
# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
