[package]
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2021"
name = "bunner-macroquad"
version = "0.1.0"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
 
# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
