[package]
authors = ["Saverio Miroddi <saverio.pub2@gmail.com>"]
edition = "2018"
name = "cavern-macroquad"
version = "0.1.0"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
phf = { version = "0.11", features = ["macros"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
 
# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
