[package]
name = "rust-flappy-bird"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14" }
rand = "0.8"
 
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
 
# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
