[package]
name = "rusty-dungeon"
version = "0.5.0"
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2021"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
legion = { version = "=0.3.1", default-features = false, features = ["codegen"] }
bracket-pathfinding = "0.8.4"
nanoserde = "0.1.26"
lazy_static = "1.4.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
 
# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


